--- a/tempodeaprender/conteudo/leiturascomplementares/0.html
+++ b/tempodeaprender/conteudo/leiturascomplementares/0.html
@@ -155,6 +155,208 @@
                     entre grafemas e fonemas e saber que fonemas e grafema
                     servem para distinguir significado.
                 </p>
+                <p align="justify">
+                    De acordo com Soares (2016), a aprendizagem da
+                    língua escrita é um fenômeno muito complexo que envolve
+                    duas funções – ler e escrever – semelhantes em alguns
+                    aspectos e diferentes em outros, e é composta de várias
+                    facetas: <b>linguística, interativa e sociocultural.</b>
+                </p>
+                <p align="justify">
+                    Na composição do processo de aprendizagem inicial
+                    da língua escrita, cada uma dessas três facetas elege
+                    um objeto de conhecimento diferente que irá influenciar
+                    tanto na concepção de aprendizagem quanto nos métodos e
+                    propostas de orientação da alfabetização.
+                </p>
+                <p align="justify">
+                    A <b>faceta linguística</b> tem como foco a
+                    representação visual da cadeia sonora da fala – a
+                    <b>alfabetização</b>, cujo objeto de conhecimento é a
+                    apropriação do sistema alfabético-ortográfico e das
+                    convenções da escrita.
+                </p>
+                <p align="justify">
+                    Este objeto demanda processos cognitivos e
+                    linguísticos específicos, e, portanto, desenvolvimento
+                    de estratégias específicas de aprendizagem, e
+                    consequentemente, de ensino – a alfabetização.
+                </p>
+                <p align="justify">
+                    A <b>faceta interativa</b> tem seu foco na língua
+                    escrita como veículo de interação entre as pessoas, de
+                    expressão e compreensão de mensagens.
+                </p>
+                <p align="justify">
+                    Seu objeto de conhecimento são as habilidades de
+                    compreensão e produção de textos, que requer diferentes
+                    processos cognitivos e linguísticos e estratégias
+                    diferentes de aprendizagem e ensino.
+                </p>
+                <p align="justify">
+                    A <b>faceta sociocultural</b> tem como foco os usos,
+                    funções e valores atribuídos à escrita em contextos
+                    socioculturais – o <b>letramento</b>.
+                </p>
+                <p align="justify">
+                    Seu objeto de conhecimento são os eventos sociais
+                    e culturais que envolvem a escrita que implica
+                    conhecimentos, habilidades e atitudes específicas que
+                    promovam inserção adequada do educando nesses eventos,
+                    isto é, em diferentes situações e contextos de uso da
+                    escrita – o letramento.
+                </p>
+                <p align="justify">
+                    É preciso destacar que se você se concentrar em
+                    apenas uma faceta durante todo o processo de
+                    alfabetização, o aluno não se alfabetiza e muito menos
+                    conseguirá se inserir no mundo letrado. O todo só
+                    poderá ser compreendido se cada uma de suas partes for
+                    também compreendida.
+                </p>
+                <p align="justify">
+                    Porém vale repetir que não existe uma única forma
+                    – ou método específico – que funcione para
+                    alfabetizarmos bem e a todos
+                </p>
+                <pre>
+                    <p align="justify">
+                        [...] quem alfabetiza não são os métodos, mas o
+                        (a) alfabetizador (a), sendo ele/ela quem é,
+                        com o uso específico que faz dos métodos e com
+                        tudo que acrescenta a eles, e sendo os
+                        alfabetizandos aqueles que são, ocorrendo o
+                        processo nos contextos e nas condições em que
+                        ocorre (SOARES,2016, p. 52).
+                    </p>
+                </pre>
+                <p align="justify">
+                    Esta autora, assim como nós, defende a
+                    sistematização do ensino por meio de vários métodos,
+                    cuja utilização irá depender dos objetivos em questão.
+                    Por isso, é que você deve estar preparado para que
+                    possa utilizar o método necessário em função do perfil
+                    de sua turma e de cada aluno, para poder escolher com
+                    autonomia a atividade mais apropriada a cada situação.
+                </p>
+                <p align="justify">
+                    Este objeto de aprendizagem é voltado para
+                    professores que lidam com indivíduos que estão com
+                    atraso escolar: ou porque nunca tiveram oportunidade de
+                    frequentar uma escola; ou porque embora tenham
+                    frequentado ainda apresentam dificuldades nos diversos
+                    níveis de apropriação do sistema de escrita.    
+                </p>
+                <p align="justify">
+                    É importante que você compreenda que uma prática
+                    pedagógica não pode ser aleatória ou gratuita, mas com
+                    base científica, planejada, organizada e avaliada
+                    constantemente. É necessário também que você saiba o
+                    <b>quê fazer</b> e <b>por que fazer</b>, perpassando pelas noções do
+                    <b>saber fazer</b> e <b>poder fazer</b>, agindo assim como educador-
+                    alfabetizador, de modo a desenvolver harmonicamente a
+                    aprendizagem do todo, não somente como uma estratégia
+                    de ensino, mas em respeito aos processos reais de
+                    leitura e escrita nos quais essas diferentes
+                    competências estão interligadas e atuam ao mesmo tempo.
+                    Este processo é denominado, por Soares, de <b>alfabetizar
+                    letrando.</b>
+                </p>
+                <p align="justify">
+                    Na construção deste objeto digital de
+                    aprendizagem, utilizamos embasamentos teóricos
+                    diferenciados, para trabalhar as três facetas propostas
+                    por Soares.
+                </p>
+                <p align="justify">
+                    Na perspectiva do ensino, de acordo com Soares, a
+                    faceta linguística deve ser o alicerce para as facetas
+                    interativa e sociocultural. Portanto, para que uma
+                    pessoa aprenda a ler e a escrever, ela precisa atingir
+                    alguns saberes e realizar conscientemente algumas
+                    percepções.
+                </p>
+                <p align="justify">
+                    Com base nas cinco capacidades necessárias para a
+                    alfabetização propostas por Lemle (2010), dividimos
+                    este objeto de aprendizagem em cinco unidades, a saber:
+                    <b>ideia de símbolo; discriminação das formas das letras;
+                        discriminação dos sons da fala; consciência da unidade
+                        palavra e a organização da página escrita</b>. Em cada
+                    unidade, oferecemos um conjunto de atividades que
+                    correspondem à aprendizagem inicial da língua escrita,
+                    relacionadas às facetas acima mencionadas, que
+                    auxiliarão você a conduzir seu aluno, de acordo com
+                    Soares, nesse processo de alfabetização.
+                </p>
+                <p align="justify">
+                    A aprendizagem inicial da língua escrita envolve
+                    esses dois processos: alfabetização, processo de
+                    aprender a ler e escrever e letramento, processo de
+                    desenvolvimento das capacidades de uso da leitura e da
+                    escrita nos contextos físico e sócio-subjetivo.
+                </p>
+                <p align="justify">
+                    <table border="1px" width="100%">
+                        <tr>
+                            <td colspan="2">APRENDIZAGEM INICIAL DA LÍNGUA ESCRITA</td>
+                        </tr>
+                        <tr>
+                            <td width="50%">ALFABETIZAÇÃO</td>
+                            <td width=50%>LETRAMENTO&nbsp; (gêneros de
+                                texto orais e escritos)</td>
+                        </tr>
+                        <tr>
+                            <td>Ideia de símbolo</td>
+                            <td>Situação de comunicação</td>
+                        </tr>
+                        <tr>
+                            <td>Discrimnação das formas das letras</td>
+                            <td>Conteúdos temáticos</td>
+                        </tr>
+                        <tr>
+                            <td>Discriminação dos sons dafala</td>
+                            <td>Organização: plano textual</td>
+                        </tr>
+                        <tr>
+                            <td>Consciência da unidade
+                                palavra</td>
+                            <td>Textualização: unidades
+                                linguísticas</td>
+                        </tr>
+                        <tr>
+                            <td>Organização da página
+                                escrita: da esquerda para
+                                direita, de cima para
+                                baixo</td>
+                            <td>Meios paralinguísticos</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td>Paginação do texto</td>
+                        </tr>
+                    </table>
+                </p>
+                <p align="justify">
+                </p>
+                <p align="justify">
+                </p>
+                <p align="justify">
+                </p>
+                <p align="justify">
+                </p>
+                <p align="justify">
+                </p>
+                <p align="justify">
+                </p>
+                <p align="justify">
+                </p>
+                <p align="justify">
+                </p>
+                <p align="justify">
+                </p>
+                <p align="justify">
+                </p>
             </div>
         </div>
     </div>
