--- a/tempodeaprender/conteudo/introducao/1.html
+++ b/tempodeaprender/conteudo/introducao/1.html
@@ -27,6 +27,8 @@
             font-size: 1.45rem;
             font-family: 'Neucha', cursive;
             text-indent: 5%;
+            padding-left: 1rem;
+            padding-right: 1rem;
         }
         h1{
             text-transform: uppercase;
@@ -66,7 +68,7 @@
             conteúdos digitais: animação, videojogos) e da
             Comunicação Visual (edição webdesign: imagens,
             textos, som), deverá ser desenvolvido em duas
-            partes: neste primeiro Aplicativo, apresentamos
+            partes: neste primeiro <a href="https://pt.wikipedia.org/wiki/Objeto_de_aprendizagem" target="_blank">objeto de aprendizagem</a>, apresentamos
             os objetos digitais de aprendizagem de
             alfabetização elaborados e utilizados por nós
             durante o tempo em que trabalhamos no Programa
