--- a/tempodeaprender/conteudo/introducao/2.html
+++ b/tempodeaprender/conteudo/introducao/2.html
@@ -27,6 +27,8 @@
             font-size: 1.45rem;
             font-family: 'Neucha', cursive;
             text-indent: 5%;
+            padding-right: 1rem;
+            padding-left: 1rem;
         }
     </style>
     <script>
