--- a/tempodeaprender/conteudo/aideiadesimbolo/a-ideia-de-simbolo.html
+++ b/tempodeaprender/conteudo/aideiadesimbolo/a-ideia-de-simbolo.html
@@ -22,7 +22,32 @@
 		}
 	</style>
 	<style>
-		#botao-esquerdo {
+		#botao-direito:hover {
+			cursor: pointer;
+		}
+
+		#botao-esquerdo:hover {
+			cursor: pointer;
+		}
+
+		#botao-direito{
+			background-image: url(../img/seta-direita.png);
+			width: 3rem;
+			height: 2.5rem;
+			position: fixed;
+			bottom: 0;
+			right: 0;
+		}
+		#botao-esquerdo{
+			background-image: url(../img/seta-esquerda.png);
+			width: 3rem;
+			height: 2.5rem;
+			position: fixed;
+			bottom: 0;
+			left: 0;
+		}
+
+		/* #botao-esquerdo {
 			position: fixed;
 			bottom: 0;
 			left: 0;
@@ -45,7 +70,7 @@
 			color: white;
 			border-radius: 1rem;
 			z-index: 999;
-		}
+		} */
 
 		#botao-direito:hover {
 			cursor: pointer;
@@ -178,9 +203,11 @@
 		</div>
 	</div>
 	<iframe id="iframe" src="0.html" width="100%" height="670px" frameborder="0"></iframe>
-	<div id="botao-esquerdo" onclick="anterior()"><i class="fa fa-arrow-circle-left" aria-hidden="true"></i>
+	<div id="botao-esquerdo" onclick="anterior()">
+		<!-- <i class="fa fa-arrow-circle-left" aria-hidden="true"></i> -->
 	</div>
-	<div id="botao-direito" onclick="proximo()"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
+	<div id="botao-direito" onclick="proximo()">
+		<!-- <i class="fa fa-arrow-circle-right" aria-hidden="true"></i> -->
 	</div>
 	</div>
 </body>
