--- a/tempodeaprender/conteudo/formadasletras/formas-das-letras.html
+++ b/tempodeaprender/conteudo/formadasletras/formas-das-letras.html
@@ -22,29 +22,22 @@
 		}
 	</style>
 	<style>
-		#botao-esquerdo {
-			position: fixed;
-			bottom: 0;
-			left: 0;
-			padding-left: 1rem;
-			padding-right: 1rem;
-			background-color: #559041;
-			border-radius: 1rem;
-			color: white;
-			z-index: 999;
 
-		}
-
-		#botao-direito {
+		#botao-direito{
+			background-image: url(../img/seta-direita.png);
+			width: 3rem;
+			height: 2.5rem;
 			position: fixed;
 			bottom: 0;
 			right: 0;
-			padding-left: 1rem;
-			padding-right: 1rem;
-			background-color: #559041;
-			color: white;
-			border-radius: 1rem;
-			z-index: 999;
+		}
+		#botao-esquerdo{
+			background-image: url(../img/seta-esquerda.png);
+			width: 3rem;
+			height: 2.5rem;
+			position: fixed;
+			bottom: 0;
+			left: 0;
 		}
 
 		#botao-direito:hover {
@@ -178,9 +171,11 @@
 		</div>
 	</div>
 	<iframe id="iframe" src="0.html" width="100%" height="670px" frameborder="0"></iframe>
-	<div id="botao-esquerdo" onclick="anterior()"><i class="fa fa-arrow-circle-left" aria-hidden="true"></i>
+	<div id="botao-esquerdo" onclick="anterior()">
+		<!-- <i class="fa fa-arrow-circle-left" aria-hidden="true"></i> -->
 	</div>
-	<div id="botao-direito" onclick="proximo()"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
+	<div id="botao-direito" onclick="proximo()">
+		<!-- <i class="fa fa-arrow-circle-right" aria-hidden="true"></i> -->
 	</div>
 	</div>
 </body>
