--- a/tempodeaprender/index.html
+++ b/tempodeaprender/index.html
@@ -10,6 +10,15 @@
 		<link rel="stylesheet" href="assets/fontawesome/css/font-awesome.min.css">
 		<script src="assets/js/comum.js"></script>
 		<link rel="stylesheet" href="assets/css/comum.css">
+
+
+		<meta http-equiv="cache-control" content="max-age=0" />
+		<meta http-equiv="cache-control" content="no-cache" />
+		<meta http-equiv="expires" content="0" />
+		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+		<meta http-equiv="pragma" content="no-cache" />
+
+		
 	</head>
 	<body>
 		<div class="barra-atualizacao">
