--- a/tempodeaprender/organizacao-da-pagina-escrita.html
+++ b/tempodeaprender/organizacao-da-pagina-escrita.html
@@ -6,6 +6,14 @@
 		<link rel="stylesheet" href="estilo/introducao.css" type="text/css"/>
 		<link rel="shortcut icon" href="imagem/favicon.ico" />
 		<link rel="stylesheet" href="estilo/bootstrap.min.css">
+
+		<meta http-equiv="cache-control" content="max-age=0" />
+		<meta http-equiv="cache-control" content="no-cache" />
+		<meta http-equiv="expires" content="0" />
+		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+		<meta http-equiv="pragma" content="no-cache" />
+
+		
 	</head>
 	<body>
 		<div class="site">
