--- a/tempodeaprender/conteudo/introducao/1.html
+++ b/tempodeaprender/conteudo/introducao/1.html
@@ -45,41 +45,81 @@
                 </div>
             </div>
         </div>
-        <p align="justify">O PROJETO “É TEMPO DE APRENDER I e II” PRODUÇÃO DE CONTEÚDOS DIGITAIS PARA ALFABETIZAÇÃO
-            DE
-            JOVENS E ADULTOS teve início em agosto de 2017, através do PROGRAMA
-            INSTITUCIONAL DE BOLSAS DE INICIAÇÃO CIENTÍFICA
-            – PIBIC, do Instituto de Educação, Ciência e
-            Tecnologia do Maranhão – IFMA, sob a minha
-            coordenação, contando com a cooperação técnica
-            das professoras Dra Eveline de Jesus Viana Sá
-            (Informática) e Dra Ivana Márcia Oliveira Maia
-            (Comunicação Visual) e dos alunos-bolsista
-            Emanuel Lucas Moraes da Luz (Informática) e
-            Jordan Silva (Comunicação Visual) e do
-            voluntário Emanuel Lindoso Ferreira
-            (Informática). e Jordan Silva (Comunicação Visual) e do
-            voluntário Emanuel Lindoso Ferreira
-            (Informática).
-            Este projeto dada a sua natureza
-            multidisciplinar e longitudinal, que envolve as
-            áreas de Linguística Aplicada (elaboração dos
-            conteúdos), da Informática (programação dos
-            conteúdos digitais: animação, videojogos) e da
-            Comunicação Visual (edição webdesign: imagens,
-            textos, som), deverá ser desenvolvido em duas
-            partes: neste primeiro <a href="https://pt.wikipedia.org/wiki/Objeto_de_aprendizagem" target="_blank">objeto de aprendizagem</a>, apresentamos
-            os objetos digitais de aprendizagem de
-            alfabetização elaborados e utilizados por nós
-            durante o tempo em que trabalhamos no Programa
-
-            Nacional de Educação na Reforma Agrária (PRONERA),
-            no estado do Maranhão, que visam preparar os
-            alfabetizadores de escolas pobres de recursos e de
-            condições de ensino adequadas para iniciar a iniciar
-            a aprendizagem de leitura e escrita; e no segundo Caderno,
-            forneceremos atividades de letramento para os aprendizes
-            que dominam precariamente a leitura e a escrita.</br></br>Profª Paula Araujo</p>
+        <p align="justify">
+            O PROJETO “É TEMPO DE APRENDER I e II” PRODUÇÃO
+            DE CONTEÚDOS DIGITAIS PARA ALFABETIZAÇÃO DE JOVENS E
+            ADULTOS teve início em agosto de 2017, através do
+            PROGRAMA INSTITUCIONAL DE BOLSAS DE INICIAÇÃO
+            CIENTÍFICA – PIBIC, no Instituto de Educação, Ciência e
+            Tecnologia do Maranhão – IFMA, sob a minha coordenação,
+            contando com a cooperação técnica das professoras Dra
+            Eveline de Jesus Viana Sá (Informática) e Dra Ivana
+            Márcia Oliveira Maia (Comunicação Visual) e dos alunos-
+            bolsista Emanuel Lucas Moraes da Luz (Informática),
+            Jordan Silva (Comunicação Visual), Mariana Dias
+            (Comunicação Visual) e do voluntário Emanuel Lindoso
+            Ferreira (Informática).
+        </p>
+        <p align="justify">
+            Dada a sua natureza multidisciplinar e
+            longitudinal, que envolve as áreas de Linguística
+            Aplicada (elaboração dos objetos de aprendizagem), da
+            Informática (desenvolvimento do software: animação,
+            videojogos) e da Comunicação Visual (edição webdesign:
+            imagens, textos, som), este projeto filia-se à corrente
+            do interacionismo social no que tange ao conceito de
+            Zona de Desenvolvimento Proximal (VIGOTSKY, 1985), a
+            distância entre o nível de desenvolvimento atual de um
+            indivíduo e a gama de possibilidades de aprendizado que
+            ele pode ter pela ajuda de alguém mais experiente, como
+            também ao Interacionismo Sociodiscursivo (BRONCKART,
+            2007, 2019) cujos aportes se concentram, nas questões
+            de ensino de línguas e formação de adultos, professores particularmente, dentre outros estudiosos centrados na
+            problemática da alfabetização Artur G. de Morais (1999;
+            2016), Faraco (2001),José Morais (2013) dentre outros.
+        </p>
+        <p align="justify">
+            Este material é voltado para os alfabetizadores,
+            principalmente, àqueles carentes de escolaridade, de
+            saber teórico, de escolas com recursos e com condições
+            adequadas de ensino, realizarem com êxito as atividades
+            de alfabetização.
+        </p>
+        <p align="justify">
+            Para este novo formato, reformulamos o
+            embasamento teórico dos conteúdos, distribuímos
+            sequencialmente as unidades e reordenamos as atividades
+            de maneira mais produtiva e didática para que seus
+            alunos desenvolvam em sua plenitude as capacidades
+            necessárias para dominarem a leitura e a escrita.
+        </p>
+        <p>
+            As atividades das três primeiras unidades: I – A
+            ideia de símbolo; II – Discriminação das formas das
+            letras; III – Discriminação dos sons da fala – estão
+            relacionadas às capacidades necessárias para a
+            alfabetização propostas por Lemle (2010) e nas facetas
+            linguística e interativa, proposta por Soares (2016).
+        </p>
+        <p>
+            As atividade da Unidade IV – Consciência da
+            unidade palavra – estão relacionadas às atividades
+            iniciais de letramento com base na quarta capacidade
+            necessária para alfabetização proposta por Lemle
+            (2010)e nas facetas interativa e sociocultural (SOARES,
+            2016).
+        </p>
+        <p>
+            Para o desenvolvimento desta última capacidade,
+            nos apoiaremos também no ISD (BROCKART, 2007;
+            DOLZ;SCHNEUWLY, 2004; DOLZ, GAGNON, DECANDIO, 2010),
+            para as questões relacionadas à apropriação e domínio
+            dos gêneros de texto e ao desenvolvimento das
+            capacidades de linguagem para que os aprendizes atinjam
+            um domínio de leitura e escrita.
+            </br></br>
+            Profª Paula de Araújo Tavares
+        </p>
     </div>
 </body>
 
