--- a/tempodeaprender/conteudo/formadasletras/0.html
+++ b/tempodeaprender/conteudo/formadasletras/0.html
@@ -21,6 +21,7 @@
             font-size: 1.5rem;
             font-family: 'PT Sans', sans-serif;
             text-indent: 5%;
+            text-align: justify;
         }
 
         h1 {
@@ -40,29 +41,138 @@
                 <h2>Unidade II</h2>
             </div>
             <div class="col-sm-12 col-xs-12 col-lg-12 col-md-12 text-center">
-                <h3>2ª Capacidade: discriminação das formas das letras</h3>
+                <h3>2ª CAPACIDADE: DISCRIMINAÇÃO DAS FORMAS
+                    DAS LETRAS</h3>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-12 col-xs-12 col-lg-12 col-md-12">
                 <p>
-                    As letras para quem ainda não se alfabetizou,
-                    como já explicamos, são riscos pretos na página branca.
-                    O alfabetizando precisa então ser capaz de entender que
-                    cada um daqueles risquinhos vale como um som da fala.
+                    Ante de iniciarmos, vamos saber o que é alfabeto. &nbsp;A representação das consoantes do alfabeto teve
+                    sua origem nas <em>civilizações semíticas</em> (hoje judeus e
+                    árabes) e a representação das vogais foi iniciada pelos
+                    <em>fenícios</em> (que habitavam o que é hoje o norte da
+                    Palestina – entre o Mar Mediterrâneo e os territórios
+                    do Líbano, Síria e Israel) e consolidada pelos <em>gregos</em>.
                 </p>
                 <p>
-                    Como o nosso alfabeto têm formas bastante
-                    parecidas: <strong>p</strong> e <strong>b</strong>; <strong>p</strong> e <strong>q</strong>;
-                    <strong>p</strong> e <strong>d</strong>; <strong>n</strong> e <strong>m</strong> ; você deve ajudar
-                    seu aluno a distingui-las.
+                    O alfabeto tem aproximadamente três mil anos, e
+                    ao longo da história da humanidade centenas de
+                    alfabetos existiram, muitos desapareceram e outros
+                    surgiram a menos de um século.
                 </p>
                 <p>
-                    As primeiras atividades desta unidade têm como
-                    objetivo estimular o alfabetizando a desenvolver essas
-                    percepções visuais mais finas, como também ensiná-los a
-                    discriminar as formas das letras e a traçá-las no
-                    papel.
+                    Há diversas soluções para representar a fala por
+                    escrito. Os <em>sistemas alfabéticos</em> que hoje são mais
+                    utilizados são o da China (que representam <em>morfemas</em> –
+                    pequenas unidades de significação, do tamanho da
+                    sílaba) e o da Índia (que representam sílabas) e o do
+                    Japão, que usam um sistema herdado do chinês e a mora
+                    (pequenas unidades de som que correspondem a uma vogal
+                    ou a uma sílaba feita de consoante e vogal ou à nasal
+                    “n”, que duram mais ou menos o mesmo tempo.
+                </p>
+                <p>
+                    Mas para nós, o que nos interessa é o <em>alfabeto
+                        latino</em> utilizado em parte por muitas comunidades
+                        linguísticas, porque as línguas são diferentes e
+                        consequentemente o número de letras também.
+                </p>
+                <p>
+                    A escrita do português é de base alfabética, o
+                    que significa que usamos letras que formam <em>grafemas</em>
+                    (letras ou grupos de letras que correspondem a um
+                    <em></em>) que servem para distinguir o significado entre
+                    as palavras na escrita.
+                </p>
+                <!-- Módulo citação -->
+                <div style="display: flex;">
+                    <div style="display: flex; flex: 1;">
+                        &nbsp;
+                    </div>
+                    <div style="display: flex; flex: 2; border: 1px solid #ddd; padding: 0.3rem;">
+                        É impossível ler uma frase sem ler as palavras que
+                        ela contém, e também é impossível reconhecer ou
+                        identificar uma palavra escrita sem “tratar”,
+                        “processar” de algum modo as letras que formam as
+                        palavras escritas (MORAIS,2013, p. 21).
+                    </div>
+                </div>
+            
+                <p>
+                    Nosso alfabeto é composto de dezessete consoantes
+                    (b, c, d, f, g, h, j, l, m, n, p, q, r, s, t, x, z),
+                    mais k, w, y que fazem parte do novo código
+                    ortográfico; cinco vogais (a, e, i, o, u), que
+                    representam doze unidades sonoras (sete orais: [i],
+                    [e], [E], [a], [ɔ], [o], [u]; cinco nasais: [ĩ], [ẽ],
+                    [ã], [õ], [ũ]) para escrever todas as palavras da nossa
+                    língua e para grafar nomes próprios estrangeiros,
+                    siglas e abreviaturas.
+                </p>
+                <p>
+                    O sistema gráfico precisa fazer também
+                </p>
+                <!-- Módulo citação -->
+                <div style="display: flex;">
+                    <div style="display: flex; flex: 1;">
+                        &nbsp;
+                    </div>
+                    <div style="display: flex; flex: 2; border: 1px solid #ddd; padding: 0.3rem;">
+                        alguns arranjos (por exemplo: combinar letras
+                        vogais com a letra n ou m para fazer a
+                        representação das unidades sonoras nasais, como
+                        manto, mundo, ponto, ou ainda permitir que a mesma
+                        letra represente mais de uma unidade sonora (por
+                        exemplo: a letra e pode representar as unidades [e]
+                        ou [E]: preço/presto (FARACO, 2001, p.33).
+                    </div>
+                </div>
+                <br/>
+                <p>
+                    Para representar os fonemas da nossa língua
+                    precisamos também usar o cê cedilha – Ç – que
+                    representa, na escrita de determinadas palavras, o
+                    fonema /s/, antes das letras A, O, U. Usamos também o til - ~ - sobre as vogais para indicar os fonemas
+                    vocálicos nasais.
+                </p>
+                <p>
+                    O fato de uma escrita ser alfabética e utilizar-
+                    se de grafemas que representam os fonemas da língua,
+                    não significa que, cada vez que ocorre um determinado
+                    fonema em qualquer palavra, ele será representado na
+                    escrita pela mesma letra, pois o uso das letras na
+                    escrita <em>alfabética</em> é regulamentado por um sistema
+                    <em>ortográfico</em>.
+                </p>
+                <p>
+                    É natural, assim, que haja uma 
+                    <em>convenção ortográfica</em>, porque a nossa
+                    escrita vem se constituindo
+                    há muitos séculos e os critérios que determinam a
+                    escolha das letras são diversos, podendo estar baseados
+                    não só na <em>fonologia</em>, mas também na <em>morfologia</em> e na
+                    <em>etimologia</em> (na história e origem das palavras), ou
+                    seja, se vêm do latim, do grego, se foram emprestadas
+                    de outras línguas europeias, de alguma língua indígena
+                    ou africana).
+                </p>
+                <p>
+                    A ortografia reflete uma tentativa de unificarmos
+                    a forma como escrevemos a fim de nos comunicarmos mais
+                    facilmente. A ortografia também reflete aspectos
+                    importantes da própria evolução de uma língua, no
+                    tocante à formação do seu léxico.
+                </p>
+                <p>
+                    Porém, é bom ressaltarmos que existe uma
+                    diferença entre o aprendizado do sistema de notação
+                    <em>alfabética</em> e o aprendizado da <em>norma ortográfica</em> (ver
+                    CONVENÇÃO ORTOGRÁFICA). No início, o alfabetizando
+                    elabora gradualmente sobre como funciona nossa escrita alfabética e domina as convenções letra-som tal como
+                    estão restringidas pelo sistema alfabético, ou seja, os
+                    valores sonoros que cada letra ou dígrafo pode ter
+                    (MORAIS, 1999).
                 </p>
             </div>
         </div>
