--- a/tempodeaprender/conteudo/formadasletras/1.html
+++ b/tempodeaprender/conteudo/formadasletras/1.html
@@ -50,11 +50,12 @@
                 <h2>Unidade II</h2>
             </div>
             <div class="col-sm-12 col-xs-12 col-lg-12 col-md-12 text-center">
-                <h3>As relações complicadas entre sons e letra  </h3>
+                <h3>2ª CAPACIDADE: DISCRIMINAÇÃO DAS FORMAS DAS LETRAS</h3>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-12 col-xs-12 col-lg-12 col-md-12">
+                <h3>As relações complicadas entre sons e letra</h3>
                 <p>
                     Para Lemle (2007), o modelo ideal do sistema
                     alfabético é o de que cada letra corresponda a um som e
