--- a/tempodeaprender/conteudo/formadasletras/3.html
+++ b/tempodeaprender/conteudo/formadasletras/3.html
@@ -162,18 +162,111 @@
         <div class="row">
             <div class="col-sm-12 col-xs-12 col-lg-12 col-md-12">
                 <p>
-                    1. Peça aos alunos para cobrirem as linhas pontilhadas:</br></br>
+                    1.Cubra e colore as figuras pontilhadas que seguem:</br></br>
                     <img src="../../atividade/img/cruz.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/cruz.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/cruz.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/cruz.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/cruz.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/cruz.png" class="img-formas" alt="">
+
+
+
                     <img src="../../atividade/img/retangulo.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/retangulo.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/retangulo.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/retangulo.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/retangulo.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/retangulo.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/retangulo.png" class="img-formas" alt="">
+
+
+
                     <img src="../../atividade/img/curva.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/curva.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/curva.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/curva.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/curva.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/curva.png" class="img-formas" alt="">
+
+
+
                     <img src="../../atividade/img/estrela.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/estrela.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/estrela.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/estrela.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/estrela.png" class="img-formas" alt="">
+
+
+
                     <img src="../../atividade/img/lua.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/lua.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/lua.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/lua.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/lua.png" class="img-formas" alt="">
+
+
+
                     <img src="../../atividade/img/coração.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/coração.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/coração.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/coração.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/coração.png" class="img-formas" alt="">
+
+                    
+
+
+
                     <img src="../../atividade/img/semicirculo.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/semicirculo.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/semicirculo.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/semicirculo.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/semicirculo.png" class="img-formas" alt="">
+
+
+
+
                     <img src="../../atividade/img/sol.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/sol.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/sol.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/sol.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/sol.png" class="img-formas" alt="">
+
+
+
                     <img src="../../atividade/img/losango.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/losango.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/losango.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/losango.png" class="img-formas" alt="">
+
+
+
+
                     <img src="../../atividade/img/triangulo.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/triangulo.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/triangulo.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/triangulo.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/triangulo.png" class="img-formas" alt="">
+
+
                     <img src="../../atividade/img/raio.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/raio.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/raio.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/raio.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/raio.png" class="img-formas" alt="">
+                    <img src="../../atividade/img/raio.png" class="img-formas" alt="">
+
+                    <center><img src="../../atividade/img/alfabeto.png" alt="" width="40%"></center>
+                    </br></br>
+                    <center><img src="../../atividade/img/alfabeto-tesoura.png" alt="" width="40%"></center>
+
+                    </br></br>
+                    <center><img src="../../atividade/img/alfabeto-tesoura2.png" alt="" width="40%"></center>
+
+                    </br></br>
+                    <center><img src="../../atividade/img/alfabeto-tesoura-3.png" alt="" width="40%"></center>
+
+
                 </p>
                 <p style="font-weight: bold; text-indent: 0;">
                     REPITA ESTAS ATIVIDADES QUANTAS VEZES FOREM NECESSÁRIAS
@@ -311,9 +404,6 @@
                     </ul>
                 </p>
                 <p><strong>Socializa&ccedil;&atilde;o</strong> &ndash; compartilhe os pontos que lhe chamaram mais aten&ccedil;&atilde;o. Esta &eacute; uma oportunidade para voc&ecirc; trabalhar os apelidos desagrad&aacute;veis, enfatizando o respeito aos demais, &agrave;s suas prefer&ecirc;ncias, ao modo como quer ser chamado, &agrave; imagem que deseja apresentar etc. Estimule os alunos chamarem seus colegas pelo nome que eles preferirem.  Imprima e cole o alfabeto na parede. (Cada aluno deverá ter uma cópia).</p>
-                <p>
-                    <center><img src="../../atividade/img/alfabeto.png" alt="" width="40%"></center>
-                </p>
                 <p><u><strong>LETRAS M&Oacute;VEIS</strong></u></p>
 
                 <p>As letras de imprensa impressas mai&uacute;sculas devem ser coladas em E.V.A ou em cartolina e distribu&iacute;das aos alunos. Com elas, os alunos poder&atilde;o montar e desmontar palavras, que lhes possibilitar&aacute; uma experi&ecirc;ncia de uma s&eacute;rie de decis&otilde;es relativas &agrave;s propriedades da aprendizagem inicial da escrita.</p>
