--- a/tempodeaprender/conteudo/formadasletras/3.html
+++ b/tempodeaprender/conteudo/formadasletras/3.html
@@ -265,10 +265,24 @@
 
                     </br></br>
                     <center><img src="../../atividade/img/alfabeto-tesoura-3.png" alt="" width="40%"></center>
+                    
+                    </br></br>
+                    <center><img src="../../atividade/img/crachas-laranjas.png" alt="" width="40%"></center>
 
+                    </br></br>
+                    <center><img src="../../atividade/img/qb-1.png" alt="" width="40%"></center>
+
+                    </br></br>
+                    <center><img src="../../atividade/img/qb-2.png" alt="" width="40%"></center>
+
+                    </br></br>
+                    <center><img src="../../atividade/img/cl-1.png" alt="" width="40%"></center>
+
+                    </br></br>
+                    <center><img src="../../atividade/img/cl-2.png" alt="" width="40%"></center>
 
                 </p>
-                <p style="font-weight: bold; text-indent: 0;">
+                <!-- <p style="font-weight: bold; text-indent: 0;">
                     REPITA ESTAS ATIVIDADES QUANTAS VEZES FOREM NECESSÁRIAS
                     OU ATÉ QUE VOCÊ OBSERVE QUE SEU ALUNO JÁ CONSEGUE
                     TRAÇAR AS LINHAS COM DESENVOLTURA E PRECISÃO.
@@ -429,7 +443,7 @@
                         <p>C) Em outra situa&ccedil;&atilde;o, fa&ccedil;a adivinha&ccedil;&otilde;es: &ldquo;Tenho um cart&atilde;o que tem quatro letras e come&ccedil;a com a letra de Fernando&rdquo;. Qual &eacute;? (Esta atividade servir&aacute; para voc&ecirc; analisar com a classe em que aspectos os nomes se parecem e se diferenciam tanto do ponto de vista qualitativo quanto quantitativo).</p>
                         </li>
                     </ul>
-                </p>
+                </p> -->
             </div>
         </div>
         <div class="ro
