--- a/tempodeaprender/conteudo/aideiadesimbolo/0.html
+++ b/tempodeaprender/conteudo/aideiadesimbolo/0.html
@@ -42,6 +42,16 @@
         <div class="row">
             <div class="col-sm-12 col-xs-12 col-lg-12 col-md-12">
                 <p>
+                    A aprendizagem da linguagem escrita envolve a
+                    elaboração de todo um sistema de representação
+                    simbólica da realidade. Sendo assim, as atividades
+                    simbólicas como gestos, desenho e o brinquedo
+                    contribuem para o desenvolvimento da representação
+                    simbólica (em que signos representam significados), e,
+                    consequentemente, para o processo de aquisição da
+                    linguagem escrita (REGO,2014).
+                </p>
+                <p>
                     Para Vygotsky (1984), a escrita é um simbolismo de
                     segunda ordem – simboliza os sons da palavra, e não a
                     “coisa” a que esses sons, simbolismo de primeira ordem, se
@@ -70,17 +80,12 @@
                 </p>
                 <p>
                     Uma coisa é símbolo de outra sem necessariamente
-                    ter as mesmas características da coisa simbolizada. A
-                    relação
-                    entre
-                    um
-                    símbolo
-                    e
-                    a
-                    coisa
-                    simbolizada
-                    é
-                    completamente arbitrária, ou seja, a ideia da forma de um
+                    ter as mesmas características da coisa simbolizada, tal
+                    como a as crianças pequenas pensam: um animal se chama
+                    vaca porque tem chifres, bezerro, porque os seus
+                    chifres são pequenos, cão porque é pequeno e não tem
+                    chifre, carro, porque não é uma animal (VIGOTSKY,
+                    1989). A relação entre um símbolo e a coisa simbolizada é completamente arbitrária, ou seja, a ideia da forma de um
                     símbolo não está nas características da coisa simbolizada.
                     Os exemplos que seguem servirão para você ilustrar para o
                     seu aluno o que é um símbolo.
