--- a/tempodeaprender/conteudo/aideiadesimbolo/0.html
+++ b/tempodeaprender/conteudo/aideiadesimbolo/0.html
@@ -67,15 +67,7 @@
                     representam em uma página branca. Embora muitos jovens
                     e adultos analfabetos já tenham incorporado este saber, é
                     necessário que entendam que esses risquinhos pretos no
-                    papel
-                    são
-                    símbolos
-                    de
-                    sons
-                    da
-                    fala;
-                    mas,
-                    devem
+                    papel são símbolos de sons da fala; mas, devem
                     compreender antes de tudo o que é um <strong>símbolo</strong>.
                 </p>
                 <p>
