--- a/tempodeaprender/conteudo/sonsdafala/0.html
+++ b/tempodeaprender/conteudo/sonsdafala/0.html
@@ -46,13 +46,31 @@
         <div class="row">
             <div class="col-sm-12 col-xs-12 col-lg-12 col-md-12">
                 <p>
-                   Para Vygotsky (1984), a escrita é um simbolismo de segunda ordem – simboliza os sons da palavra, e não a “coisa” a que esses sons, simbolismo de primeira ordem, se referem. Para aprender a escrita, é preciso evoluir no sentido do simbolismo de segunda ordem, e, para isso, “precisa fazer uma descoberta básica – a de que se pode desenhar, além de coisas, também a fala” (VYGOTSKY,    1984:130-131).
+                    Nas Unidades I, II, fornecemos a você diversas sugestões de como trabalhar com as duas primeiras capacidades básicas para o ensino da leitura e escrita: a ideia de símbolo e a discriminação das formas das letras. 
                 </p>
                 <p>
-                    As letras simbolizam sons da fala, é, portanto, necessário ensinar o alfabetizando a aprender ouvir os diferentes sons para que possa saber escolher a letra certa que simboliza cada som: [p] de pé do [f] de fé; o [p] de paca e [b] de bala, para que possa também perceber as unidades sucessivas de sons da fala que utilizamos para enunciar as palavras e distingui-las com consciência uma das outras.
+                    Nesta Unidade, iremos trabalhar a terceira capacidade básica para o ensino da leitura e escrita: a discriminação dos sons da fala, relacionada à faceta linguística. Para o sucesso desta etapa, sua atuação e, principalmente, seu preparo, é fundamental.
                 </p>
                 <p>
-                    Os jovens e adultos muitas vezes já são capazes de reconhecer semelhanças entre segmentos sonoros de palavras, seja pelo significado ou por aspectos fonológicos, já que convivem desde cedo no ambiente familiar e social com textos do folclore popular que exploram bastantes rimas e aliterações como cantigas de ninar, parlendas, cantigas de roda e trava-línguas.
+                    De acordo com Soares, a escrita alfabética grafa os significantes – os sons da fala –, decompondo-os em suas unidades mínimas, os fonemas.
+                </p>
+                <p>
+                    Os fonemas são entidades abstratas, não observáveis diretamente, não audíveis e não pronunciáveis isoladamente, mas visíveis sob a forma de letras ou grafemas.
+                </p>
+                <p>
+                    A essência da escrita alfabética é a conversão de sons da fala em letras ou combinação de letras – escrita -, de letras em sons da fala – leitura. 
+                </p>
+                <!-- Módulo citação -->
+                <div style="display: flex;">
+                    <div style="display: flex; flex: 1;">
+                        &nbsp;
+                    </div>
+                    <div style="display: flex; flex: 2; border: 1px solid #ddd; padding: 0.3rem;">
+                        É impossível ler uma frase sem ler as palavras que ela contém, e também é impossível reconhecer ou identificar uma palavra escrita sem “tratar”, “processar” de algum modo as letras que formam as palavras escritas (MORAIS, J., 2013, p. 21).
+                    </div>
+                </div>
+                <p>
+                    Para Lemle (2007), ler consiste em decodificar símbolos visuais arbitrários tanto os sons quanto o sentido. Já que as letras simbolizam sons da fala, é necessário ensinar o alfabetizando a aprender a ouvir os diferentes sons para que ele possa saber escolher a letra certa que simboliza cada som: [<strong>p</strong>] de <strong>pé</strong> e o [f] de fé; o [p] de paca e [b] de bala, para que ele possa também perceber as unidades sucessivas de sons da fala que utilizamos para enunciar as palavras e distingui-las com consciência uma das outras.
                 </p>
             </div>
         </div>
