--- a/tempodeaprender/conteudo/sonsdafala/1.html
+++ b/tempodeaprender/conteudo/sonsdafala/1.html
@@ -30,34 +30,143 @@
         h2 {
             text-transform: uppercase;
         }
+
+        td{
+            text-align: center;
+            font-size: 1.5rem;
+        }
+
+        .centraliza{
+            text-align: center !important;
+        }
     </style>
 </head>
 
 <body>
     <div class="container-fluid">
         <div class="row mark">
-            <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12 text-center">
-                <h2>Unidade III</h2>
-            </div>
             <div class="col-sm-12 col-xs-12 col-lg-12 col-md-12 text-center">
-                <h3>3ª CAPACIDADE: DISCRIMINAÇÃO DOS SONS DA FALA</h3>
+                <h3>As relações complicadas entre sons e letra</h3>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-12 col-xs-12 col-lg-12 col-md-12">
                 <p>
-                   Antes de continuarmos, vamos dar uma parada para dar os significados de rima de aliteração que interessa ao desenvolvimento da consciência fonológica.
+                    Para Lemle (2007), o modelo ideal do sistema
+                    alfabético é o de que cada letra corresponda a um som e
+                    cada som a uma letra, mas esta relação só se realiza em
+                    pouquíssimos casos. As coisas que acontecem entre sons
+                    e letras são bem mais complicadas do que essa perfeição
+                    de casamento monogâmico entre letra e som.
                 </p>
+                <h4><strong>Primeiro tipo de relação</strong></h4>
                 <p>
-                    Os jovens e adultos muitas das vezes já são capazes de reconhecer semelhanças entre segmentos sonoros de palavras, seja pelo significado seja pelos aspectos fonológicos, já que convivem desde cedo no ambiente familiar e social com textos do folclore popular que exploram bastantes rimas e aliterações como cantigas de ninar, parlendas, cantigas de roda e trava-línguas.
+                    O ideal, num sistema de escrita desta natureza, é
+                    que cada letra represente um som e cada som uma letra.                </p>
                 </p>
-                <h2 class="mark">SABERES A SABER</h2>
-
-                <p align="justify">
-                    RIMA – é a semelhança entre os sons finais de palavras: vi<strong>ola</strong> – cart<strong>ola</strong>, viole<strong>iro</strong> – leite<strong>iro</strong>, ca<strong>fé</strong>-bo<strong>né</strong>, ir<strong>mão</strong>-ba<strong>lão</strong>, bo<strong>la</strong>-vi<strong>la</strong>, va<strong>ca</strong>-fo<strong>ca</strong>; ou entre as duas últimas sílabas entre palavras: bo<strong>ne</strong>ca-ca<strong>ne</strong>ca; com<strong>ba</strong>te-de<strong>ba</strong>te.
-                </p>
+                <!-- Módulo citação -->
+                <div style="display: flex;">
+                    <div style="display: flex; flex: 1;">
+                        &nbsp;
+                    </div>
+                    <div style="display: flex; flex: 2; border: 1px solid #ddd; padding: 0.3rem;">
+                        Chama-se de correspondência biunívoca aquela em que
+                        um elemento de um conjunto corresponde a apenas um
+                        elemento de outro conjunto, ou seja, é de um para
+                        um a correspondência entre os elementos, em ambas
+                        as direções (LEMLE, 2007, p. 17).
+                    </div>
+                </div>
                 <p>
-                    ALITERAÇÃO - é a semelhança entre sons iniciais de palavras em sílabas (CV) como em <strong>ba</strong>laio-<strong>ba</strong>cia; <strong>gi</strong>rafa-<strong>gi</strong>gante; e também em fonemas como em <strong>fa</strong>ca-<strong>fo</strong>ca, <strong>ra</strong>to-<strong>ro</strong>da.
+                    Embora sejam poucos os casos em que estas
+                    regularidades simples se aplicam, são as que mais
+                    predominam no português.
+                </p>
+                <table width="100%" border="1px">
+                    <tr>
+                        <td colspan="3">Quadro 1 - <strong>Uma letra representando um só som</strong></td>
+                    </tr>
+                    <tr>
+                        <td><em>Letra</em></td>
+                        <td><em>Fone (som)</em></td>
+                        <td><em>Exemplos</em></td>
+                    </tr>
+                    <tr>
+                        <td><strong>p</strong></td>
+                        <td><strong>[p]</strong></td>
+                        <td>
+                            <p>pato, mapa</p>
+                            <p>prato, apto</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><strong>b</strong></td>
+                        <td><strong>[b]</strong></td>
+                        <td>
+                            <p>bala, cabana</p>
+                            <p>cobra, obter</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><strong>f</strong></td>
+                        <td><strong>[f]</strong></td>
+                        <td>
+                            <p>faca, café</p>
+                            <p>frade, afta</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><strong>v</strong></td>
+                        <td><strong>[v]</strong></td>
+                        <td>
+                            <p>vaca, cavalo</p>
+                            <p>nevralgia</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><strong>nh</strong></td>
+                        <td><strong>[ῆ]</strong></td>
+                        <td>
+                           <p>
+                            nhoque, banho
+                           </p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><strong>t</strong></td>
+                        <td><strong>[t]</strong></td>
+                        <td>
+                            <p>tabela, pata</p>
+                            <p>trago</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><strong>d</strong></td>
+                        <td><strong>[d]</strong></td>
+                        <td>
+                            <p>dar, lado</p>
+                            <p>droga, advogado</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><strong>lh</strong></td>
+                        <td><strong>[̮ḹ]</strong></td>
+                        <td>
+                            <p>palha, lhama</p>
+                        </td>
+                    </tr>
+                </table>
+                Fonte: adaptado pela autora (FARACO, 2001, p.17)</br></br>
+                <h4><strong>Segundo tipo de relação</strong></h4>
+                <p>
+                    As relações entre sons e letras, neste segundo
+                    tipo, são uma forma de poligamia (casamento de um homem
+                    com várias mulheres) e de poliandria (casamento de uma
+                    mulher com vários homens) muito especial. “É como se o
+                    homem polígamo tivesse apenas uma mulher em cada cidade
+                    que frequenta, e a mulher poliândrica tivesse um só
+                    homem em cada lugar frequentado por ela” (LEMLE, 2007,
+                    p.19).
                 </p>
             </div>
         </div>
@@ -65,3 +174,5 @@
 </body>
 
 </html>
+
+
